# comms-software

./: .cproject  .gitignore  .gitlab-ci.yml  .gitlab_ci.yml  .gitmodules  .mxproject  .project  CMakeLists.txt  CMakeLists_template.txt  README.md  STM32H755-comms-sw.ioc  STM32H755.ioc  STM32H7A3ZIQSetup.ioc  conan-arm-profile  conan-profile  conanfile.py  conanfile.txt
CM4/: .cproject  .project
CM4/Core/Inc/: stm32h7xx_hal_conf.h
CM4/Core/Src/: main.c
CM7/: .cproject  .project  STM32H755ZITX_RAM.ld
CM7/Core/Inc/: FreeRTOSConfig.h  main.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h
CM7/Core/Inc/FreeRTOSTasks/: CANTransimitTask.hpp  DummyPacketMakerTask.hpp  Task.hpp  TmTxDataLinkTask.hpp
CM7/Core/Inc/Parameters/: PlatformParameters.hpp
CM7/Core/Inc/Platform/: CANDriver.hpp
CM7/Core/Src/: main.c  main.cpp  main_cpp.cpp  stm32h7xx_hal_msp.c  stm32h7xx_it.c
CM7/Core/Src/FreeRTOSTasks/: DummyPacketMakerTask.cpp  DummyTask.cpp  TmTxDataLinkTask.cpp
CM7/Core/Src/Platform/: CANDriver.cpp
CM7/Core/lib/FreeRTOS/Source/: tasks.c  timers.c
CM7/Core/lib/FreeRTOS/Source/portable/MemMang/: heap_4.c
Core/Inc/: COBS.hpp  FreeRTOSConfig.h  main.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h
Core/Inc/CAN/: ApplicationLayer.hpp  Driver.hpp
Core/Inc/FreeRTOSTasks/: CAN.hpp  CANGatekeeperTask.hpp  CANTransimitTask.hpp  CurrentSensorsTask.hpp  DummyPacketMakerTask.hpp  DummyTask.h  DummyTask.hpp  HouseKeepingTask.hpp  HousekeepingTask.hpp  InitializationTask.hpp  PSUEnableMonitorTask.hpp  StatisticsReportingTask.hpp  TCHandlingTask.hpp  Task.hpp  TemperatureSensorsTask.hpp  TimeBasedSchedulingTask.hpp  TimeKeepingTask.hpp  TmTxDataLinkTask.hpp  TransceiverIQPacketCreation.hpp  TransceiverTask.h  TransceiverTask.hpp  UARTGatekeeperTask.hpp  WatchdogTask.hpp  txUHFTask.hpp
Core/Inc/FreeRTOSTasks/Platform/: CANDriver.hpp
Core/Inc/Platform/: COMMS_Definitions.hpp  Definitions.hpp  ECSS_Configuration.hpp
Core/Inc/Platform/Parameters/: CommonParameters.hpp  HousekeepingService.hpp  Parameters.hpp  PeakSatParameters.hpp  PlatformParameters.hpp
Core/Inc/Platoform/: COMMS_Definitions.hpp
Core/Src/: main.c  main.cpp  stm32h7xx_hal_msp.c  stm32h7xx_it.c
Core/Src/CAN/: ApplicationLayer.cpp  Driver.cpp
Core/Src/FreeRTOSTasks/: CAN.cpp  CANGatekeeperTask.cpp  CANTestTask.cpp  CurrentSensorsTask.cpp  DummyPacketMakerTask.cpp  DummyTask.cpp  InitializationTask.cpp  MCUTemperatureTask.cpp  PSUEnableMonitorTask.cpp  TCHandlingTask.cpp  TemperatureSensorsTask.cpp  TimeKeepingTask.cpp  TmTxDataLink.cpp  TransceiverIQPacketCreation.cpp  TransceiverTask.cpp  UARTGateKeeperTask.cpp  UARTGatekeeperTask.cpp  WatchdogTask.cpp  txUHFTask.cpp
Core/Src/Platform/: Logger.cpp  TaskInitialization.cpp
Core/Src/Platform/Services/: ParameterService.cpp
Core/lib/FreeRTOS/Source/CMSIS_RTOS_V2/: cmsis_os2.c
Drivers/CMSIS/Device/ST/STM32H7xx/Include/: stm32h7a3xxq.h  stm32h7xx.h
Drivers/STM32H7xx_HAL_Driver/Inc/: stm32h7xx_hal.h  stm32h7xx_hal_def.h  stm32h7xx_hal_fdcan.h  stm32h7xx_hal_rcc.h  stm32h7xx_hal_rcc_ex.h  stm32h7xx_ll_rcc.h
Drivers/STM32H7xx_HAL_Driver/Src/: stm32h7xx_hal_pwr.c
STM32H755-comms-sw/: .mxproject  .project  CMakeLists.txt  README.md  STM32H755-comms-sw.ioc  STM32H755.ioc
STM32H755-comms-sw/CM4/: .cproject  .project  STM32H755-comms-sw_CM4 Debug.cfg  STM32H755-comms-sw_CM4 Debug.launch
STM32H755-comms-sw/CM4/Core/Inc/: main.h  stm32h7xx_hal_conf.h
STM32H755-comms-sw/CM4/Core/Src/: main.c  stm32h7xx_hal_msp.c
STM32H755-comms-sw/CM4/Debug/: STM32H755-comms-sw_CM4.elf  STM32H755-comms-sw_CM4.list  STM32H755-comms-sw_CM4.map  makefile  objects.list
STM32H755-comms-sw/CM4/Debug/Common/Src/: subdir.mk  system_stm32h7xx_dualcore_boot_cm4_cm7.d
STM32H755-comms-sw/CM4/Debug/Core/Src/: main.d  main.su  stm32h7xx_hal_msp.d  stm32h7xx_hal_msp.su  stm32h7xx_it.d  subdir.mk
STM32H755-comms-sw/CM4/Debug/Core/Startup/: subdir.mk
STM32H755-comms-sw/CM4/Debug/Drivers/STM32H7xx_HAL_Driver/: stm32h7xx_hal.d  stm32h7xx_hal_cortex.d  stm32h7xx_hal_dma.d  stm32h7xx_hal_dma_ex.d  stm32h7xx_hal_eth.d  stm32h7xx_hal_eth_ex.d  stm32h7xx_hal_exti.d  stm32h7xx_hal_flash.d  stm32h7xx_hal_flash_ex.d  stm32h7xx_hal_gpio.d  stm32h7xx_hal_hsem.d  stm32h7xx_hal_i2c.d  stm32h7xx_hal_i2c_ex.d  stm32h7xx_hal_mdma.d  stm32h7xx_hal_pwr.d  stm32h7xx_hal_pwr_ex.d  stm32h7xx_hal_rcc.d  stm32h7xx_hal_rcc_ex.d  stm32h7xx_hal_tim.d  stm32h7xx_hal_tim_ex.d  stm32h7xx_hal_uart.d  stm32h7xx_hal_uart_ex.d  subdir.mk
STM32H755-comms-sw/CM7/: .cproject  .project  STM32H755-comms-sw_CM7 Debug.cfg  STM32H755-comms-sw_CM7 Debug.launch  STM32H755ZITX_FLASH.ld  STM32H755ZITX_RAM.ld
STM32H755-comms-sw/CM7/Core/Inc/: FreeRTOSConfig.h  bch_decoder.hpp  main.h
STM32H755-comms-sw/CM7/Core/Src/: bch_decoder.cpp  main.c  main.cpp  main_cpp.cpp  stm32h7xx_hal_msp.c
STM32H755-comms-sw/CM7/Debug/: STM32H755-comms-sw_CM7.elf  STM32H755-comms-sw_CM7.list  STM32H755-comms-sw_CM7.map  makefile  objects.list
STM32H755-comms-sw/CM7/Debug/Common/Src/: subdir.mk  system_stm32h7xx_dualcore_boot_cm4_cm7.d
STM32H755-comms-sw/CM7/Debug/Core/Src/: main.d  main.su  stm32h7xx_hal_msp.su  subdir.mk
STM32H755-comms-sw/CM7/Debug/Core/Startup/: subdir.mk
STM32H755-comms-sw/CM7/Debug/Drivers/STM32H7xx_HAL_Driver/: stm32h7xx_hal.d  stm32h7xx_hal_cortex.d  stm32h7xx_hal_dma.d  stm32h7xx_hal_dma_ex.d  stm32h7xx_hal_eth.d  stm32h7xx_hal_eth_ex.d  stm32h7xx_hal_exti.d  stm32h7xx_hal_flash.d  stm32h7xx_hal_flash_ex.d  stm32h7xx_hal_gpio.d  stm32h7xx_hal_hsem.d  stm32h7xx_hal_i2c.d  stm32h7xx_hal_i2c_ex.d  stm32h7xx_hal_mdma.d  stm32h7xx_hal_pcd.d  stm32h7xx_hal_pcd_ex.d  stm32h7xx_hal_pwr.d  stm32h7xx_hal_pwr_ex.d  stm32h7xx_hal_rcc.d  stm32h7xx_hal_rcc_ex.d  stm32h7xx_hal_tim.d  stm32h7xx_hal_tim_ex.d  stm32h7xx_hal_uart.d  stm32h7xx_hal_uart_ex.d  stm32h7xx_ll_usb.d  subdir.mk
Src/: stm32h7xx_hal_msp.c  stm32h7xx_it.c
